:construction:  Add existing API to the swagger document
